# blueprint

./: CMakeLists.txt  LICENSE  README.md
dictionaries/: words.txt
src/: default_dictionary.cpp  default_dictionary.h  dictionary.cpp  dictionary.h  lookup.cpp  lookup.h  main.cpp  template.cpp  template.h
